# My-plp-final-project

./: .gitignore  .replit  Dockerfile.flask  Dockerfile.streamlit  README.md  api_server.py  app.py  crisis_resources.py  deployment_guide.md  docker-compose.yml  kenya_mental_health_resources.py  mental_health_resources.py  mobile_deployment_guide.md  pyproject.toml  replit.md  requirements.txt  sentiment_analyzer.py
.streamlit/: config.toml
components/: header.py
