[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "spacy>=3.8.7",
    "streamlit>=1.47.0",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
]
